# math-library

./: .clang-format  CMakeLists.txt  README.md
include/math_utils/: math_utils.hpp
